# Entropy8

./: .dockerignore  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml
apps/cli/entropy8_cli/: __init__.py  main.py
apps/gui/: CMakeLists.txt  resources.qrc
apps/gui/qml/: Main.qml
apps/gui/src/: app.cpp  app.hpp  backend.cpp  backend.hpp  main.cpp  theme.cpp  theme.hpp  ui.cpp  ui.hpp
build_release/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build_release/.qt/deploy_qml_imports/: entropy8_gui.cmake
build_release/apps/gui/.qt/qml_imports/: entropy8_gui_build.rsp  entropy8_gui_conf.cmake  entropy8_gui_conf.rsp
build_release/apps/gui/entropy8_gui_autogen/: deps  moc_predefs.h
build_release/apps/gui/entropy8_gui_autogen/UVLADIE3JM/: moc_backend.cpp  moc_backend.cpp.d
docker/: Dockerfile  README.md  docker-compose.yml
docs/: architecture.md
engine/bindings/python/entropy8_engine/: __init__.py  core.py
engine/core/: CMakeLists.txt  README.md
engine/core/include/entropy8/: codec.h  config.h  engine_bridge.h  entropy8.h  io.h  multi_format.h
engine/core/src/: codec.c  entropy8_api.c  io.c  multi_format.cpp
engine/core/src/algorithms/: lz4.c  lzma.c  zstd.c
engine/core/src/crypto/: aes256.c  aes256.h  e8_crypto.c  e8_crypto.h  sha256.c  sha256.h
engine/core/src/engine/: archive.cpp  archive.hpp  bridge.cpp  thread_pool.cpp  thread_pool.hpp
installer/: License.rtf  Package.wxs
out2/: README.md
scripts/: LICENSE  README.md  build-gui.ps1  build-gui.sh  register-shell.ps1  release.ps1  run.ps1  run.sh
